Add parking routes + swagger
